# shelp

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
scripts/: bump_version.py
src/shelp/: cli.py  config.py  errors.py  hotkeys.py  macos.py  models.py  prompts.py  providers.py  repair.py  session.py  shells.py  ui.py  utils.py
tests/: test_cli.py  test_config.py  test_hotkeys.py  test_macos.py  test_repair.py  test_shells.py  test_version_sync.py
